--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 html,
 body {
     height: 100%;
+    overflow: hidden;
 }
 
 .side {
     float: left;
     width: 25%;
     height: 100%;
+    overflow-y: scroll;
 }
 
 .map {
