--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ ul {
 }
 
 /* Style the list items */
-ul li {
+ul li.trackerLI {
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
@@ -45,23 +45,23 @@ ul li {
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
+ul li.trackerLI:nth-child(odd) {
     background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
-ul li:hover {
+ul li.trackerLI:hover {
     background: #ddd;
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.checked {
+ul li.trackerLI.checked {
     background: #888;
     color: #fff;
 }
 
 /* Add a "checked" mark when clicked on */
-ul li.checked::before {
+ul li.trackerLI.checked::before {
     content: '';
     position: absolute;
     border-color: #fff;
